# Llama-Inference-JAX

./: .gitignore  README.md  comparing_modules.py  converting.py  forward.py  generation.py  generation_test.py  llama_result.py  pyproject.toml  sharding_test.py
src/lijax/covertors/: convert_llama.py
src/lijax/generation/: generation.py
src/lijax/model/: __init__.py  _modules.py
src/lijax/model/llama/: __init__.py  structure.py
src/lijax/ops/: pallas_oprations.py
src/lijax/sharding/: __init__.py  partitions.py
src/llama_interface_jax/: utils.py
src/llama_interface_jax/covertors/: __init__.py  convert_llama.py
src/llama_interface_jax/generation/: __init__.py  generation.py
src/llama_interface_jax/model/: __init__.py  _modules.py  structure.py
src/llama_interface_jax/model/llama/: __init__.py  structure.py
src/llama_interface_jax/ops/: __init__.py  attention.py  flash_attention.py  operations.py  pallas_oprations.py
